--- a/Agricola/Logistic.FrontEnd/Views/TipoAlmacen/Index.cshtml
+++ b/Agricola/Logistic.FrontEnd/Views/TipoAlmacen/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    var titPrincipal = "Tipos de Almacenes";
+    var tituloPrincipal = "Tipos de Almacenes"; 
 }
 
 @section Estilos {
@@ -13,13 +13,13 @@
 <!-- Lista -->
 <div class="card shadow mb-4">
     <div class="card-header py-3 bg-second-primary">
-        <h6 class="m-0 font-weight-bold text-white">@titPrincipal</h6>
+        <h6 class="m-0 font-weight-bold text-white">@tituloPrincipal</h6>
     </div>
     <div class="card-body">
         <div class="row">
             <div class="col-sm-6">
                 <button class="btn btn-info" id="btn-nuevo"><i class="fas fa-plus-circle"></i> Nuevo</button>
-                <a class="btn btn-success" href="@Url.Action("ListarPDF", "TipoAlmacen")"><i class="fas fa-file-pdf"></i> Listado </a>
+                <a class="btn btn-success" href="@Url.Action("ListarPDF", "GenericTablaGlobalesReportPdf", new { titulo = @tituloPrincipal, fileName = $"Tipo Almacen {DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")}.pdf", orientation = "Portrait", url = "/api/tipoalmacen" })"><i class="fas fa-file-pdf"></i> Listado </a>
                 <a class="btn btn-info" href="@Url.Action("Index", "Home")"><i class="fas fa-arrow-left"></i> Regresar</a>
             </div>
         </div>
@@ -49,7 +49,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4>@titPrincipal</h4>
+                <h4>@tituloPrincipal</h4>
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
